--- a/static/style.css
+++ b/static/style.css
@@ -10,7 +10,7 @@ body{
 }
 
 #content_login{
-    background-image: url('../images/background.png');
+    background-image: url('http://i64.tinypic.com/34htmc7.png');
     margin: 0;
 }
 
