--- a/static/style.css
+++ b/static/style.css
@@ -167,7 +167,7 @@ p.btn_opc {
     height: 32px;
     margin: 5% auto;
     box-sizing: border-box;
-    padding: 4px;
+    padding: 6px;
     font-size: 14px;
     font-weight: 600;
     color: #c49a3d;
@@ -197,6 +197,7 @@ p.btn_opc {
 
 .header a, .header p{
     display: inline-block;
+    margin: 0;
 }
 
 .header p{
