--- a/static/style.css
+++ b/static/style.css
@@ -249,3 +249,13 @@ a{
     padding: 20px;
     height: auto;
 }
+
+.btn_voltar {
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    background-color: #c49a3d;
+    z-index: 1;
+    top: 364px;
+    color: #fff;
+}
