--- a/static/style.css
+++ b/static/style.css
@@ -36,7 +36,7 @@ body{
 label{
 	position: relative;
     height: 30px;
-    text-align: left;
+    text-align: center;
     text-transform: uppercase;
     font-size: 12px;
     font-weight: 400;
@@ -50,7 +50,7 @@ label{
 
 #hident2, #hident3, #hident4, #hident5, #hident6, #hident7, #hident8, #hident9, #hident10{
 	position: relative;
-	width: 500px;
+	width: 100%;
 	height: auto;
 	border-radius: 5px;
 	background-color: transparent;
@@ -275,4 +275,13 @@ a{
 .informacoes th{
     background-color: #c49a3d;
     color: #000;
+}
+
+.btn_direcoes{
+    background-color: #c49a3d;
+    color: #000;
+    text-transform: uppercase;
+    width: auto;
+    margin: 0;
+    font-size: 14px;
 }
