--- a/static/style.css
+++ b/static/style.css
@@ -284,9 +284,11 @@ a{
     background-color: #c49a3d;
     color: #000;
     text-transform: uppercase;
-    width: auto;
-    margin: 0;
+    width: 150px;
+    margin: 0 auto;
     font-size: 14px;
+    box-sizing: border-box;
+    padding: 5px;
 }
 
 td{
